2010-10-01 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* just a follow up tag on the changes already documented by Olaf
	* tag KLFitter-00-03-03

2010-10-01 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* implementation of the new TF for 7TeV ttbar:
		-distinguish: DetectorAtlas_7TeV / DetectorAtlas_10TeV
		-new ResDoubleGaussE_1: ljets/e @7TeV, ResDoubleGaussE_2: bjets @7TeV,
		 ResDoubleGaussE_3: ljets/bjets/e @10TeV
		-TF for muons is @7TeV ResDoubleGaussPt instead of single Gaussian
		-ASCII files with the parameters of the TF are now in transferfunctions/ttbar
	* 7TeV and 10TeV TF for ttbar can be chosen with two flags in config.conf: FlagIs7TeV / FlagIs10TeV
	* Note: 
		-This is not the final solution, because this is not general enough for all kinds 
		 of topologies and object definitions
		-There has been a bug introduced in the interface during the major code clean-up,
		 so no matching information for the jets is available. This bug has not yet been fixed.
	* tag: KLFitter-00-03-02

2010-09-20 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* minor change to default configuration in the top_ljets example
	* tag: KLFitter-00-03-01

2010-09-20 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* all changes from 2010-04-22 until 2010-09-20 have been commited to the Goettingen CVS
	* migrating finally back to SVN
	* tag: KLFitter-00-03-00

2010-09-20 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* removing CVS directories
	* tag: KLFitter-00-02-03

2010-09-20 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* pay attention: tag KLFitter2-00-01-19 broken (!)
	* replaced all tabs by spaces
	* tag : KLFitter2-00-01-20

2010-08-13 Kevin Kroeninger <kevin.kroeninger@phys.uni-goettingen.de>
	
	* Major code clean-up in all classes. Sorry, I forgot to fill out
	  the ChangeLog. See commit messages for some details.
	
2010-08-02 Kevin Kroeninger <kevin.kroeninger@phys.uni-goettingen.de>
	