@@ -3,7 +3,7 @@
 #include <iostream> 
 
 // --------------------------------------------------------- 
-KLFitter::DetectorBase::DetectorBase() :
+KLFitter::DetectorBase::DetectorBase(std::string folder) :
   fResEnergyLightJet(0), 
   fResEnergyBJet(0), 
   fResEnergyGluonJet(0), 
